# PROJECT_TEMPLATE

./: .bumpversion.cfg  .djlintrc  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .markdownlint.json  .markdownlint.yaml  .mocharc.js  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .readthedocs.yaml  404.html  DEVELOP.md  README.md  SConstruct  _package.json  index.html  markdownlint.yaml  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini  webpack.config.js
.github/workflows/: docs.yml  mkdocs.yml  npm.yml  pre-commit.yml  pypi.yml  python_publish_pypi.yml  python_test_tox.yml  test.yml  unittest.yml
APP/: .bumpversion.cfg  DEVELOP.md  README.md  manage.py  npm-shrinkwrap.json  package.json  requirements.txt
APP/main/: admin.py  settings.py
APP/main/static/: .gitignore
APP/src/: main.js
JAVASCRIPT_PACKAGE/: .bumpversion.cfg  package-lock.json  package.json
JAVASCRIPT_PACKAGE/javascript_package/: index.mjs
JAVASCRIPT_PACKAGE/src/: index.html  index.js  index.scss  main.mjs
JAVASCRIPT_PACKAGE/test/: test_example.js  test_example.mjs
PYTHON_PACKAGE/: .bumpversion.cfg  __init__.py  __main__.py  setup.py
PYTHON_PACKAGE/python_package/: __init__.py
PYTHON_PACKAGE/python_package/test/: test_example.py  test_notebook.py
PYTHON_PACKAGE/test/: test_doctest.py  test_notebook.py
WINGECHR_PACKAGE_TEMPLATE/: __init__.py  __main__.py
_app/: requirements.txt
_docs/: mkdocs.yml
_docs/docs/: example.ipynb
_javascript_frontend/src/: index.scss
_javascript_package/test/: test_example.mjs
_python_package/: README.md  setup.py
_python_package/test/: test_doctest.py
api/: index.html
app/: .bumpversion.cfg  .prettierignore  README.md  manage.py  package-lock.json  package.json  requirements-ldap.txt  requirements.txt
app/_local/: .gitignore  settings_example.py
app/app/: admin.py  api.py  apps.py  package.json  settings.py  urls.py  wsgi.py
app/app/main/: admin.py  api.py  models.py  settings.py  urls.py  utils.py
app/app/migrations/: 0001_initial.py
app/data/: settings_example.py
app/main/: admin.py  api.py  settings.py  static.py  tests.py  urls.py  wsgi.py
app/main/migrations/: 0001_initial.py
app/webserver/: apache.conf
assets/: README.md  SConscript  SConstruct  gitinfo.SConscript  pyproject.toml
django/client/: client.py
django/main/: models.py  tests.py
django/project/: tools.py  urls.py  wsgi.py
django_app/: .bumpversion.cfg  .gitignore  README.md  build.sh  deploy.sh  local_settings.example.py  package-lock.json  package.json  requirements.txt  settings.py  test.sh  urls.py  wsgi.py
django_app/app/: __init__.py  local_settings.example.py  manage.py  settings.local_example.py  settings.py  wsgi.py
django_app/app/data/: apps.py  routers.py
django_app/app/main/: api.py  apps.py  forms.py  models.py  routers.py  settings.py  static.py  tests.py  urls.py  views.py
django_app/data/: api.py
django_app/data/migrations/: 0001_initial.py
django_app/main/: admin.py  api.py  context_processors.py  forms.py  views.py
django_app/scripts/: build.sh  deploy.sh  test.sh
docs/: README.md  api.md  api.rst  conf.py  index.md  index.rst  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/: api.md  example.ipynb  examples.ipynb  index.md
example/: index.html
frontend/: .pre-commit-config.yaml  package-lock.json  package.json
frontend/src/: index.html
javascript_frontend/: .bumpversion.cfg  .npmignore  package-lock.json  package.json
javascript_frontend/public/: index.html
javascript_frontend/src/: App.js  App.mjs  apiClient.js  index.html  index.mjs
javascript_package/: .bumpversion.cfg  .npmignore  package.json
javascript_package/javascript_package/: index.mjs
javascript_package/test/: test_example.mjs
python_client/: .bumpversion.cfg  README.md  setup.py
python_client/python_client/: __main__.py
python_package/: .bumpversion.cfg  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
python_package/python_package/: __init__.py  __main__.py
python_package/test/: test_example.py
python_server/: .bumpversion.cfg  README.md  package.json  pyproject.toml
python_server/app/: local_settings.example.py  manage.py
python_server/app/data/: api.py  models.py
python_server/app/main/: admin.py  context_processors.py  views.py
python_server/app/main/management/commands/: create_default_users.py
python_server/app/main/templates/: 404.html  500.html
python_server/app/main/templates/accounts/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  registration.html
python_server/app/main/templates/main/: base.html  index.html  navbar-language-switcher.html  navbar-theme-switcher.html  navbar-user.html  navbar.html
scons/: SConscript  SConstruct  requirements.txt
scons/src/: data.json
search/: search_index.json
server_django/: .gitignore  DEVELOP.md  manage.py  npm-shrinkwrap.json  package-lock.json  package.json  requirements.txt
server_django/_local/: settings_example.py  settings_ldap_example.py
server_django/client/: client.py
server_django/main/: admin.py  api.py  apps.py  models.py  settings.py  tests.py  urls.py  views.py
server_django/project/: settings.py  tools.py  urls.py
server_django/src/: apiClient.js  main.js  utils.js
src/css/: bootstrap.scss
src/html/: pages.json
src/static/: SConscript
test/: test_example.js  test_example.py
web_client/: DEVELOP.md  SConstruct  babel.config.json  npm-shrinkwrap.json  package.json  requirements.txt
web_client/css/: SConscript
web_client/html/: SConscript  index.html
web_client/src/: vendor.json
web_client/test/: test_example.js
webapp/: .eslintrc.json  .gitignore  .pre-commit-config.yaml  SConstruct  npm-shrinkwrap.json  package.json  requirements.txt
webapp/src/: .gitignore  index.html  main.js  main.mjs  test_main.js
webapp/wingechr-webapp/: index.mjs  package.json
(+131 files in other folders)
