[project]
name = "PROJECT_TEMPLATE"
version = "0.0.0"
description = "DESCRIPTION"
license = "CC0-1.0"
authors = [{ name = "c.winger" }]
readme = "README.md"
urls = { "Repository" = "https://github.com/wingechr/PROJECT_TEMPLATE" }

requires-python = ">=3.10"
dependencies = [
  "wingechr-assets @ file:///${PROJECT_ROOT}/assets",
  "wingechr-docs @ file:///${PROJECT_ROOT}/docs",
  "wingechr-python-package @ file:///${PROJECT_ROOT}/python_package",
  "wingechr-python-server @ file:///${PROJECT_ROOT}/python_server",
  "bumpversion",
  "djlint",
  "ipykernel",
  "poethepoet>=0.38.0",
  "pre-commit",
  "pytest",
  "tox",
  "twine",
  "vulture",
]
