[project]
name = "PROJECT_TEMPLATE"
version = "0.1.0"
description = "DESCRIPTION"
license = "CC0-1.0"
authors = [{ name = "c.winger" }]
readme = "README.md"
urls = { "Repository" = "https://github.com/wingechr/PROJECT_TEMPLATE" }

requires-python = ">=3.10"
dependencies = [
  "wingechr-assets @ file:///${PROJECT_ROOT}/assets",
  "wingechr-docs @ file:///${PROJECT_ROOT}/docs",
  "wingechr-python-package @ file:///${PROJECT_ROOT}/python_package",
  "wingechr-python-server @ file:///${PROJECT_ROOT}/python_server",
  "bumpversion~=0.6",
  "djlint~=1.36",
  "ipykernel~=6.31",
  "poethepoet~=0.38",
  "pre-commit~=4.5",
  "pytest~=9.0",
  "tox~=4.32",
  "twine~=6.2",
  "vulture~=2.14",
]
