[project]
name = "wingechr-docs"
version = "0.0.0"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-jupyter>=0.25",      # 0.24 fails
  "mkdocs-material>=9.7",
  "mkdocstrings>=1.0",
  "mkdocstrings-python>=2.0",
  "pymdown-extensions>=10.17",
  "mdx-truly-sane-lists>=1.3", # important for nested lists formatted with prettier
  "mistune>2,<3",              # NOTE 3.x does not work with mkdocs-jupyter

]

[tool.poe.tasks]
build = "mkdocs build"
