[project]
name = "wingechr-PYTHON-PACKAGE"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
urls = {}
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = ["click>=8.3", "coloredlogs>=15.0"]

# BUILD

[tool.setuptools.packages.find]
include = ["python_package"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
python_package = ["data/*.*"]


# TEST

[tool.tox]
envlist = ["py310", "py314"]
requires = ["tox-uv>=1.0"]

[tool.tox.testenv]
deps = ["pytest"]
commands = ["pytest"]

# SCRIPTS

[tool.poe.tasks]
test = "uv tool run tox"
build = "uv build"
